Revision history for libeio

1.0
	- "outbundled" from IO::AIO.
